ecmascript/parser/tests/test262-error-references/fail/f063969b23239390.module.js.stderr
error: Unexpected token Some(Word(export))
 --> $DIR/tests/test262-parser/fail/f063969b23239390.module.js:1:11
  |
1 | while (1) export default 3
  |           ^^^^^^

